[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "ipaddress>=1.0.23",
    "joblib>=1.5.1",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "psutil>=7.0.0",
    "requests>=2.32.5",
    "scikit-learn>=1.7.1",
    "streamlit>=1.48.1",
    "trafilatura>=2.0.0",
]
